<resources>
    <string name="app_name">Job Portal</string>
    <string name="title_app">Job Portal</string>
    <string name="slogan">Tìm kiếm công việc mơ ước</string>
    <string name="welcome">Hello there, Welcome!</string>
    <string name="signin">Đăng nhập để tiếp tục</string>
    <string name="user">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="forgotpass">Quên mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="or">hoặc</string>
    <string name="singup_title">Welcome</string>
    <string name="singup_slogan">Đăng ký để bắt đầu cuộc hành trình</string>
    <string name="pass_repeat">Xác nhận mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="ho">Họ</string>
    <string name="ten">Tên</string>
</resources>